Session11 - Filters, JSP, Hibernate Intro

--- a/Session10/WebContent/WEB-INF/web.xml
+++ b/Session10/WebContent/WEB-INF/web.xml
@@ -4,6 +4,7 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
+  
   <servlet>
     <servlet-name>MyServlet</servlet-name>
     <servlet-class>co.edureka.controller.LoginServlet</servlet-class>
@@ -12,4 +13,15 @@
     <servlet-name>MyServlet</servlet-name>
     <url-pattern>/Awesome</url-pattern>
   </servlet-mapping>
+  
+  <filter>
+  	<filter-name>MyFilter</filter-name>
+  	<filter-class>co.edureka.controller.LoginFilter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+  	<filter-name>MyFilter</filter-name>
+  	<url-pattern>/Awesome</url-pattern>
+  </filter-mapping>
+  
 </web-app>
